Add libraries extraction